--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "imports": {
-		"@hono/hono": "jsr:@hono/hono@^4.6.5"
-	}
+	"name": "@jvhellemond/validate",
+	"version": "0.1.0",
+	"exports": "./mod.js"
 }
